--- a/config_sample.env
+++ b/config_sample.env
@@ -1,18 +1,15 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5641169576:AAG-lRk-sdu-RBaw2BN89v1nbGXtizg80ts"
+GDRIVE_FOLDER_ID = "0AJjdS6HiMrvFUk9PVA"
+OWNER_ID = 1347339510
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-INDEX_URL = ""
+IS_TEAM_DRIVE = "true"
+INDEX_URL = "https://abcd.david00singh00.workers.dev/1:/"
 USER_SESSION_STRING = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API = 28671691
+TELEGRAM_HASH = "1c57a16b243c93e1c5f32c825394aa62"
 USE_SERVICE_ACCOUNTS = ""
 MEGA_KEY = ""
 MEGA_USERNAME = ""
